--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 
         <h1>iLong Corp.<br>& Friends</h1>
 
-        <p class="subtitle">Corporate Presentation Building</p>
+        <p class="subtitle">Corporate Building</p>
 
         <div class="buttons">
-          <a href="hired.html" class="btn primary">LET’S START</a>
-<a href="learnmore.html" class="btn outline">LEARN MORE</a>
+          <a href="whatposition.html" class="btn primary">LET’S START</a>
+          <a href="learnmore.html" class="btn outline">LEARN MORE</a>
         </div>
 
-        <p class="footer-text">Presented by ilong & sponsors</p>
+        <p class="footer-text">Founded by: ilong&sponsors</p>
       </div>
     </div>
   </section>
 
 </body>
 </html>
+
+
