Fix HTML encoding issues in manager.html

--- a/manager.html
+++ b/manager.html
@@ -168,9 +168,9 @@
     if (score === 5) {
       message = "🔥 LETSGOOOOOOOOOOO KAYATA PERFECT SCORE ANG BUANG.";
     } else if (score >= 3) {
-      message = "👍 SAKTO RA BAI 3 RA ISKOR.";
+      message = "👍ANA JUD AYPAG BINUGO";
     } else {
-      message = "⚠ BUGUAS AMAW OY NAZERO MAN HAHAHAHAH.";
+      message = "⚠ BUGUAS AMAW OY HAHAHAHAH.";
     }
 
     document.querySelector(".choices").style.display = "none";
@@ -184,3 +184,4 @@
 
 </body>
 </html>
+
