--- a/manager.html
+++ b/manager.html
@@ -170,7 +170,7 @@
     } else if (score >= 3) {
       message = "👍ANA JUD AYPAG BINUGO";
     } else {
-      message = "⚠ BUGUAS AMAW OY HAHAHAHAH.";
+      message = "BUGUAS AMAW OY HAHAHAHAH.";
     }
 
     document.querySelector(".choices").style.display = "none";
@@ -184,4 +184,5 @@
 
 </body>
 </html>
+
 
